@@ -5,210 +5,250 @@ import de.fhdw.webshop.order.OrderItem;
 import de.fhdw.webshop.order.OrderRepository;
 import de.fhdw.webshop.order.OrderStatus;
 import de.fhdw.webshop.product.Product;
+import de.fhdw.webshop.product.ProductRepository;
 import de.fhdw.webshop.product.ProductService;
 import de.fhdw.webshop.standingorder.dto.*;
 import de.fhdw.webshop.user.User;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.time.Instant;
 import java.time.LocalDate;
-import java.time.YearMonth;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class StandingOrderService {
 
     private static final BigDecimal TAX_RATE = new BigDecimal("0.19");
-    private final StandingOrderRepository standingOrderRepository;
-    private final ProductService productService;
+
+    private final StandingOrderRepository repository;
+    private final ProductRepository productRepository;
     private final OrderRepository orderRepository;
     private final ProductService.DiscountLookupPort discountLookupPort;
 
     public List<StandingOrderResponse> listForCustomer(Long customerId) {
-        return standingOrderRepository.findByCustomerId(customerId).stream()
-                .map(this::toResponse)
-                .toList();
+        return repository.findByCustomerId(customerId).stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     @Transactional
     public StandingOrderResponse create(User customer, CreateStandingOrderRequest request) {
-        validateIntervalFields(request.intervalType(), request.intervalDays(), 
-                               request.dayOfWeek(), request.dayOfMonth(), request.monthOfYear());
+        StandingOrder so = new StandingOrder();
+        so.setCustomer(customer);
+        so.setNextExecutionDate(request.firstExecutionDate());
+        so.setActive(true);
+        so.setCreatedAt(Instant.now());
+        
+        // Mapping der Intervall-Felder aus dem Request
+        so.setIntervalType(request.intervalType());
+        so.setIntervalValue(request.intervalValue());
+        so.setDayOfWeek(request.dayOfWeek());
+        so.setDayOfMonth(request.dayOfMonth());
+        so.setMonthOfYear(request.monthOfYear());
+        so.setCountBackwards(request.countBackwards());
 
-        StandingOrder standingOrder = new StandingOrder();
-        standingOrder.setCustomer(customer);
-        standingOrder.setIntervalType(request.intervalType());
-        standingOrder.setIntervalDays(request.intervalDays());
-        standingOrder.setDayOfWeek(request.dayOfWeek());
-        standingOrder.setDayOfMonth(request.dayOfMonth());
-        standingOrder.setMonthOfYear(request.monthOfYear());
+        // WICHTIG: Sicherstellen, dass die Liste initialisiert ist
+        if (so.getItems() == null) {
+            so.setItems(new ArrayList<>());
+        }
 
-        LocalDate firstExecution = calculateFirstExecutionDate(
-                request.intervalType(), request.firstExecutionDate(),
-                request.dayOfWeek(), request.dayOfMonth(), request.monthOfYear());
-        standingOrder.setNextExecutionDate(firstExecution);
+        if (request.items() != null) {
+            for (var itemReq : request.items()) {
+                Product product = productRepository.findById(itemReq.productId())
+                        .orElseThrow(() -> new EntityNotFoundException("Produkt nicht gefunden: " + itemReq.productId()));
+                
+                StandingOrderItem item = new StandingOrderItem();
+                item.setProduct(product);
+                item.setQuantity(itemReq.quantity());
+                item.setStandingOrder(so);
+                so.getItems().add(item);
+            }
+        }
 
-        applyItems(standingOrder, request.items());
-        return toResponse(standingOrderRepository.save(standingOrder));
+        return mapToResponse(repository.save(so));
     }
 
     @Transactional
-    public StandingOrderResponse update(Long standingOrderId, Long customerId, UpdateStandingOrderRequest request) {
-        validateIntervalFields(request.intervalType(), request.intervalDays(), 
-                               request.dayOfWeek(), request.dayOfMonth(), request.monthOfYear());
+    public StandingOrderResponse update(Long id, Long customerId, UpdateStandingOrderRequest request) {
+        StandingOrder so = repository.findByIdAndCustomerId(id, customerId)
+                .orElseThrow(() -> new EntityNotFoundException("Dauerauftrag nicht gefunden"));
 
-        StandingOrder standingOrder = loadForCustomer(standingOrderId, customerId);
-        standingOrder.setIntervalType(request.intervalType());
-        standingOrder.setIntervalDays(request.intervalDays());
-        standingOrder.setDayOfWeek(request.dayOfWeek());
-        standingOrder.setDayOfMonth(request.dayOfMonth());
-        standingOrder.setMonthOfYear(request.monthOfYear());
+        so.setIntervalType(request.intervalType());
+        so.setIntervalValue(request.intervalValue());
+        so.setDayOfWeek(request.dayOfWeek());
+        so.setDayOfMonth(request.dayOfMonth());
+        so.setMonthOfYear(request.monthOfYear());
+        so.setCountBackwards(request.countBackwards());
 
-        standingOrder.getItems().clear();
-        applyItems(standingOrder, request.items());
-        return toResponse(standingOrderRepository.save(standingOrder));
+        so.getItems().clear();
+        if (request.items() != null) {
+            for (var itemReq : request.items()) {
+                Product product = productRepository.findById(itemReq.productId())
+                        .orElseThrow(() -> new EntityNotFoundException("Produkt nicht gefunden"));
+                StandingOrderItem item = new StandingOrderItem();
+                item.setProduct(product);
+                item.setQuantity(itemReq.quantity());
+                item.setStandingOrder(so);
+                so.getItems().add(item);
+            }
+        }
+
+        return mapToResponse(repository.save(so));
     }
 
     @Transactional
-    public void delete(Long standingOrderId, Long customerId) {
-        StandingOrder standingOrder = loadForCustomer(standingOrderId, customerId);
-        standingOrderRepository.delete(standingOrder);
+    public void cancel(Long id, Long customerId) {
+        StandingOrder so = repository.findByIdAndCustomerId(id, customerId)
+                .orElseThrow(() -> new EntityNotFoundException("Dauerauftrag nicht gefunden"));
+        so.setActive(false);
+        repository.save(so);
     }
 
-    @Transactional
-    public StandingOrderResponse toggleActive(Long standingOrderId, Long customerId) {
-        StandingOrder standingOrder = loadForCustomer(standingOrderId, customerId);
-        standingOrder.setActive(!standingOrder.isActive());
-        return toResponse(standingOrderRepository.save(standingOrder));
-    }
-
+    /**
+     * US #55 — Diese Methode behebt den Fehler im StandingOrderScheduler.
+     */
     @Transactional
     public void executeAllDue() {
-        List<StandingOrder> dueOrders = standingOrderRepository
-                .findByActiveIsTrueAndNextExecutionDateLessThanEqual(LocalDate.now());
-
-        for (StandingOrder standingOrder : dueOrders) {
-            executeStandingOrder(standingOrder);
-            standingOrder.setNextExecutionDate(calculateNextExecutionDate(standingOrder));
-            standingOrderRepository.save(standingOrder);
-        }
-    }
-
-    private LocalDate calculateNextExecutionDate(StandingOrder order) {
-        LocalDate current = order.getNextExecutionDate();
-        return switch (order.getIntervalType()) {
-            case DAILY -> current.plusDays(1);
-            case WEEKLY -> current.plusDays(7);
-            case MONTHLY -> calculateNextMonthDay(current, order.getDayOfMonth());
-            case YEARLY -> calculateNextYearDate(current, order.getDayOfMonth(), order.getMonthOfYear());
-            case DAYS -> current.plusDays(order.getIntervalDays());
-        };
-    }
-
-    private LocalDate calculateFirstExecutionDate(IntervalType type, LocalDate start, Integer dow, Integer dom, Integer moy) {
-        return switch (type) {
-            case DAILY, DAYS -> start;
-            case WEEKLY -> {
-                int currentDow = start.getDayOfWeek().getValue();
-                int daysToAdd = (dow - currentDow + 7) % 7;
-                yield start.plusDays(daysToAdd);
+        log.info("Suche nach fälligen Daueraufträgen...");
+        List<StandingOrder> dueOrders = repository.findByActiveIsTrueAndNextExecutionDateLessThanEqual(LocalDate.now());
+        for (StandingOrder so : dueOrders) {
+            try {
+                processSingleStandingOrder(so);
+            } catch (Exception e) {
+                log.error("Fehler bei Dauerauftrag {}: {}", so.getId(), e.getMessage());
             }
-            case MONTHLY -> calculateFirstMonthDay(start, dom);
-            case YEARLY -> calculateFirstYearDate(start, dom, moy);
-        };
-    }
-
-    private LocalDate calculateNextMonthDay(LocalDate from, Integer dom) {
-        LocalDate next = from.plusMonths(1);
-        return getValidDateForMonth(next.getYear(), next.getMonthValue(), dom);
-    }
-
-    private LocalDate calculateFirstMonthDay(LocalDate start, Integer dom) {
-        LocalDate thisMonth = getValidDateForMonth(start.getYear(), start.getMonthValue(), dom);
-        return thisMonth.isBefore(start) ? calculateNextMonthDay(start, dom) : thisMonth;
-    }
-
-    private LocalDate calculateFirstYearDate(LocalDate start, Integer dom, Integer moy) {
-        LocalDate thisYear = getValidDateForMonth(start.getYear(), moy, dom);
-        return thisYear.isBefore(start) ? getValidDateForMonth(start.getYear() + 1, moy, dom) : thisYear;
-    }
-
-    private LocalDate calculateNextYearDate(LocalDate from, Integer dom, Integer moy) {
-        return getValidDateForMonth(from.getYear() + 1, moy, dom);
-    }
-
-    private LocalDate getValidDateForMonth(int year, int month, int dom) {
-        YearMonth ym = YearMonth.of(year, month);
-        if (dom > ym.lengthOfMonth()) {
-            return LocalDate.of(year, month, 1).plusMonths(1);
         }
-        return LocalDate.of(year, month, dom);
     }
 
-    private void validateIntervalFields(IntervalType type, Integer days, Integer dow, Integer dom, Integer moy) {
-        if (type == IntervalType.WEEKLY && dow == null) throw new IllegalArgumentException("Wochentag fehlt");
-        if (type == IntervalType.MONTHLY && dom == null) throw new IllegalArgumentException("Tag fehlt");
-        if (type == IntervalType.YEARLY && (dom == null || moy == null)) throw new IllegalArgumentException("Datum fehlt");
-        if (type == IntervalType.DAYS && days == null) throw new IllegalArgumentException("Intervall fehlt");
-    }
-
-    private void executeStandingOrder(StandingOrder standingOrder) {
-        User customer = standingOrder.getCustomer();
+    private void processSingleStandingOrder(StandingOrder so) {
         Order order = new Order();
-        order.setCustomer(customer);
-        BigDecimal subtotal = BigDecimal.ZERO;
+        order.setCustomer(so.getCustomer());
+        order.setStatus(OrderStatus.PENDING);
+        order.setCreatedAt(Instant.now());
+        // Wichtig: In Order.java ist shippingCost 'nullable = false'
+        order.setShippingCost(BigDecimal.ZERO); 
+        
+        List<OrderItem> orderItems = new ArrayList<>();
+        BigDecimal total = BigDecimal.ZERO;
 
-        for (StandingOrderItem standingOrderItem : standingOrder.getItems()) {
-            Product product = standingOrderItem.getProduct();
-            if (!product.isPurchasable()) continue;
-
-            BigDecimal unitPrice = product.getRecommendedRetailPrice();
-            OrderItem orderItem = new OrderItem();
-            orderItem.setOrder(order);
-            orderItem.setProduct(product);
-            orderItem.setQuantity(standingOrderItem.getQuantity());
-            orderItem.setPriceAtOrderTime(unitPrice);
-            order.getItems().add(orderItem);
-            subtotal = subtotal.add(unitPrice.multiply(BigDecimal.valueOf(standingOrderItem.getQuantity())));
+        for (StandingOrderItem sItem : so.getItems()) {
+            OrderItem oItem = new OrderItem();
+            oItem.setProduct(sItem.getProduct());
+            oItem.setQuantity(sItem.getQuantity());
+            
+            // 1. Korrektur: getRecommendedRetailPrice() statt getPrice() (aus Product.java)
+            BigDecimal price = sItem.getProduct().getRecommendedRetailPrice();
+            
+            // 2. Korrektur: Falls getDiscountForProduct rot bleibt, 
+            // schau bitte kurz in das Interface 'ProductService.DiscountLookupPort'
+            // ob die Methode dort eventuell 'getDiscount' oder ähnlich heißt.
+            BigDecimal discount = discountLookupPort.findBestActiveDiscountPercent(
+                so.getCustomer().getId(), 
+                sItem.getProduct().getId()
+            );
+            BigDecimal finalPrice = applyDiscount(price, discount);
+            
+            // 3. Korrektur: setPriceAtOrderTime() statt setPriceAtPurchase() (aus OrderItem.java)
+            oItem.setPriceAtOrderTime(finalPrice);
+            oItem.setOrder(order);
+            orderItems.add(oItem);
+            
+            total = total.add(finalPrice.multiply(BigDecimal.valueOf(sItem.getQuantity())));
         }
 
-        if (order.getItems().isEmpty()) return;
-
-        BigDecimal taxAmount = subtotal.multiply(TAX_RATE).setScale(2, RoundingMode.HALF_UP);
-        order.setTotalPrice(subtotal.add(taxAmount).setScale(2, RoundingMode.HALF_UP));
-        order.setTaxAmount(taxAmount);
-        order.setShippingCost(BigDecimal.ZERO);
-        order.setStatus(OrderStatus.CONFIRMED);
+        order.setItems(orderItems);
+        
+        // 4. Korrektur: setTotalPrice() statt setTotalAmount() (aus Order.java)
+        order.setTotalPrice(total);
+        order.setTaxAmount(total.multiply(TAX_RATE).setScale(2, RoundingMode.HALF_UP));
+        
         orderRepository.save(order);
+
+        updateNextExecutionDate(so);
+        repository.save(so);
     }
 
-    private void applyItems(StandingOrder standingOrder, List<StandingOrderItemRequest> itemRequests) {
-        for (StandingOrderItemRequest req : itemRequests) {
-            StandingOrderItem item = new StandingOrderItem();
-            item.setStandingOrder(standingOrder);
-            item.setProduct(productService.loadProduct(req.productId()));
-            item.setQuantity(req.quantity());
-            standingOrder.getItems().add(item);
+    private void updateNextExecutionDate(StandingOrder so) {
+        LocalDate next = so.getNextExecutionDate();
+        int val = so.getIntervalValue();
+
+        switch (so.getIntervalType()) {
+            case DAYS -> next = next.plusDays(val);
+            case WEEKS -> {
+                // Springt X Wochen weiter und setzt den Wochentag exakt
+                next = next.plusWeeks(val);
+                if (so.getDayOfWeek() != null) {
+                    next = next.with(java.time.DayOfWeek.of(so.getDayOfWeek()));
+                }
+            }
+            case MONTHS -> {
+                next = next.plusMonths(val);
+                if (so.isCountBackwards()) {
+                    // Vom Ende des Monats zurückzählen
+                    next = next.withDayOfMonth(next.lengthOfMonth()).minusDays(so.getDayOfMonth() - 1);
+                } else {
+                    // Normaler Tag im Monat (begrenzt auf Monatslänge, z.B. 31. vs 30.)
+                    next = next.withDayOfMonth(Math.min(so.getDayOfMonth(), next.lengthOfMonth()));
+                }
+            }
+            case YEARS -> {
+                next = next.plusYears(val);
+                if (so.getMonthOfYear() != null && so.getDayOfMonth() != null) {
+                    next = next.withMonth(so.getMonthOfYear())
+                            .withDayOfMonth(Math.min(so.getDayOfMonth(), next.plusYears(0).withMonth(so.getMonthOfYear()).lengthOfMonth()));
+                }
+            }
         }
+        so.setNextExecutionDate(next);
     }
 
-    private StandingOrder loadForCustomer(Long id, Long customerId) {
-        return standingOrderRepository.findByIdAndCustomerId(id, customerId)
-                .orElseThrow(() -> new EntityNotFoundException("Order not found"));
+    @Transactional
+    public StandingOrderResponse toggleActive(Long id, Long customerId) {
+        StandingOrder so = repository.findByIdAndCustomerId(id, customerId)
+                .orElseThrow(() -> new EntityNotFoundException("Dauerauftrag nicht gefunden"));
+        
+        so.setActive(!so.isActive()); // Schaltet von true auf false oder umgekehrt
+        return mapToResponse(repository.save(so));
     }
 
-    private StandingOrderResponse toResponse(StandingOrder order) {
-        List<StandingOrderItemResponse> itemResponses = order.getItems().stream()
-                .map(i -> new StandingOrderItemResponse(i.getId(), i.getProduct().getId(), i.getProduct().getName(), i.getQuantity()))
-                .toList();
+    private BigDecimal applyDiscount(BigDecimal price, BigDecimal discountPercent) {
+        if (discountPercent == null || discountPercent.compareTo(BigDecimal.ZERO) == 0) return price;
+        BigDecimal multiplier = BigDecimal.ONE.subtract(discountPercent.divide(BigDecimal.valueOf(100)));
+        return price.multiply(multiplier).setScale(2, RoundingMode.HALF_UP);
+    }
+
+    private StandingOrderResponse mapToResponse(StandingOrder so) {
+        List<StandingOrderItemResponse> items = so.getItems().stream()
+                .map(i -> new StandingOrderItemResponse(
+                        i.getId(),
+                        i.getProduct().getId(),
+                        i.getProduct().getName(),
+                        i.getQuantity()))
+                .collect(Collectors.toList());
+
         return new StandingOrderResponse(
-                order.getId(), order.getIntervalType(), order.getIntervalDays(),
-                order.getDayOfWeek(), order.getDayOfMonth(), order.getMonthOfYear(),
-                order.getNextExecutionDate(), order.isActive(), order.getCreatedAt(), itemResponses);
+                so.getId(),
+                so.getIntervalType(),
+                so.getIntervalValue(),
+                so.getDayOfWeek(),
+                so.getDayOfMonth(),
+                so.getMonthOfYear(),
+                so.isCountBackwards(),
+                so.getNextExecutionDate(),
+                so.isActive(),
+                so.getCreatedAt(),
+                items
+        );
     }
 }
